<resources>
    <string name="app_name">100517944_Assignment2</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="name">Name</string>
    <string name="product_description">Product Description</string>
    <string name="price">Price</string>
    <string name="price_in_bitcoin">Price in Bitcoin</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
