<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uoit.dmancini.a100517944_assignment2.BrowseProductsActivity">


    <Button
        android:text="@string/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/prev"
        android:onClick="goToPrevious"/>

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="goToNext" />

    <Button
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/delet_this"
        android:textColor="#f00000"
        android:onClick="deleteCurrent" />

    <TextView
        android:text="@string/product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/prod_id_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/prod_id"
        android:layout_below="@+id/prod_id_title"
        android:layout_alignParentStart="true"
        android:hint="@string/product_id"
        android:focusable="false"/>

    <TextView
        android:text="@string/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prod_name_title"
        android:layout_below="@+id/prod_id"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/prod_name"
        android:layout_below="@+id/prod_name_title"
        android:layout_alignParentStart="true"
        android:hint="@string/name"
        android:inputType="none"
        android:focusable="false"/>

    <TextView
        android:text="@string/product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prod_name"
        android:layout_alignParentStart="true"
        android:id="@+id/prod_desc_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:layout_below="@+id/prod_desc_title"
        android:id="@+id/prod_desc"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:hint="@string/product_description"
        android:focusable="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:layout_above="@+id/prev"
        android:id="@+id/new_prod_price"
        android:layout_alignParentStart="true"
        android:hint="@string/price"
        android:layout_alignEnd="@+id/prod_name_title"
        android:focusable="false"/>

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/new_prod_price"
        android:layout_alignEnd="@+id/prod_id_title"
        android:id="@+id/prod_price_title"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_above="@+id/next"
        android:layout_toEndOf="@+id/prev"
        android:id="@+id/prod_price_bc"
        android:hint="@string/price_in_bitcoin"
        android:focusable="false"/>
</RelativeLayout>
