<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.uoit.dmancini.a100517944_assignment2.AddProductActivity">

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cancel"
        android:onClick="cancelActivity"/>

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="saveActivity" />

    <TextView
        android:text="@string/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prod_name_title"
        android:layout_below="@+id/new_prod_id" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/new_prod_name"
        android:hint="@string/name"
        android:layout_below="@+id/prod_name_title"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prod_price_title"
        android:layout_below="@+id/new_prod_desc"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prod_desc_title"
        android:layout_below="@+id/new_prod_name"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/new_prod_desc"
        android:hint="@string/product_description"
        android:layout_below="@+id/prod_desc_title"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/new_prod_price"
        android:hint="@string/price"
        android:layout_below="@+id/prod_price_title"
        android:layout_alignParentStart="true" />

</RelativeLayout>
